# MarketX-contract

./: .gitignore  Cargo.toml  README-CONTRACT.md  README.md
contracts/: Cargo.toml  README.md
contracts /marketplace/src/: types.rs
contracts/anti-fraud/: Cargo.toml
contracts/anti-fraud/src/: events.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/auction/: Cargo.toml
contracts/auction/src/: admin.rs  lib.rs  storage.rs  types.rs
contracts/auction/src/test/: auction_test.rs  bidding_test.rs  mod.rs  settlement_test.rs
contracts/factory/: Cargo.toml
contracts/factory/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/hello-world/src/: escrow.rs  events.rs  lib.rs  order.rs  tests.rs
contracts/marketplace/: Cargo.toml  README.md
contracts/marketplace/src/: batch.rs  errors.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/marketx/: Cargo.toml
contracts/marketx/src/: errors.rs  lib.rs  test.rs  types.rs
contracts/marketx/src/examples/: README.md  app.js  index.html
contracts/marketx/src/tests/: integration.rs
contracts/marketx/test_snapshots/test/: test_bulk_escrow_creation_is_atomic.1.json  test_create_escrow_rejects_non_positive_amount.1.json  test_create_escrow_stores_values.1.json  test_disputed_to_refunded.1.json  test_disputed_to_released.1.json  test_escrow_status_variants_round_trip.1.json  (+11 more)
contracts/registry/: Cargo.toml
contracts/registry/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs
stellar-contracts/: Cargo.toml
stellar-contracts/marketplace/: README.md
(+18 files in other folders)
